--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -1,7 +1,7 @@
 {% import '@bolt/_macro/_macro.html.twig' as macro %}
 
 <div class="btn-group">
-{{ macro.button('action.save', 'fa-save', 'success', 'submit', 'editcontent') }}
+{{ macro.button('action.save', 'fa-save', 'success', {'type': 'submit', 'form': 'editcontent'}) }}
 
 {% if record.id %}
     &nbsp;
