update test + put disabled defaut button in kitchensink

--- a/templates/pages/kitchensink.html.twig
+++ b/templates/pages/kitchensink.html.twig
@@ -53,6 +53,7 @@
         <label>Default</label>
         <p>
         {{ macro.button() }}
+        {{ macro.button('Button', 'fa-question-circle', 'tertiary',  {'disabled': 'disabled' }) }}
         </p>
 
         <label>Primary, Secondary, Tertiary</label>
