--- a/assets/scss/modules/editor/fields/_date.scss
+++ b/assets/scss/modules/editor/fields/_date.scss
@@ -1,8 +1,11 @@
 //** Fields | Date
 
 .editor--date {
-  &.form-control:disabled,
   &.form-control[readonly] {
     background-color: var(--foreground);
+  }
+
+  &.form-control:disabled {
+    background-color: $input-disabled-bg;
   }
 }
