--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -43,6 +43,10 @@ $input-focus-border-color:              var(--primary-400);
 $custom-control-indicator-active-bg:    var(--primary-400);
 $custom-range-thumb-active-bg:          var(--primary-400);
 
+$input-disabled-bg:                     #F0F3F6;
+$input-disabled-color:                  #777;
+
+
 $input-btn-focus-width:                 0.15rem;
 $input-btn-focus-box-shadow:            0 0 0 $input-btn-focus-width var(--primary-200);
 
@@ -51,10 +55,11 @@ $card-border-width:                 0;
 $card-border-radius:                $border-radius;
 $card-border-color:                 transparent;
 $card-bg:                           var(--foreground);
-$card-box-shadow: 0 7.5px 15px -5px rgba(0, 0, 0, 0.07);
+$card-box-shadow:                   0 7.5px 15px -5px rgba(0, 0, 0, 0.07);
 
 // Buttons
 $btn-font-weight: 500;
+$btn-padding-x: 0.6rem;
 
 $primary: #1863AF;
 $secondary: #5DA1AC;
@@ -102,9 +107,7 @@ $modal-dialog-margin-y-sm-up: 4rem;
   --admin-toolbar: #4C6E91;
   --admin-toolbar-text-light: #fff;
   --admin-toolbar-text-dark: #0c223b;
-
 }
-
 
 :root {
   @each $bp, $value in $grid-breakpoints {
