--- a/templates/finder/_uploader.html.twig
+++ b/templates/finder/_uploader.html.twig
@@ -4,7 +4,8 @@
 <div class="card mb-4">
     <div class="card-header">{{ 'caption.file_uploader'|trans }}</div>
 
-    <form action="{{ path('bolt_async_upload', {'location': location, 'path': path}) }}" method="POST" class="dropzone" style="width:200px; height:200px; border:1px dashed crimson">
+    <form action="{{ path('bolt_async_upload', {'location': location, 'path': path}) }}" method="POST" class="dropzone editor__image--dropzone">
+        <i class="fas fa-upload"></i>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('upload') }}">
         <div class="fallback">
             <input name="file" type="file" multiple />
