--- a/assets/scss/modules/editor/fields/_image.scss
+++ b/assets/scss/modules/editor/fields/_image.scss
@@ -39,6 +39,33 @@
       width: 100%;
     }
   }
+  &--dropzone {
+      width: 100%;
+      height: 100%;
+      padding: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: var(--primary);
+      font-weight: bolder;
+
+        i {
+          font-size: 3.5rem;
+          margin: 2rem 0;
+          color: transparentize($primary, 0.7);
+        }
+
+    &.dz-drag-hover {
+      background: transparentize($secondary, 0.15);
+      color: var(--admin-toolbar-text-light);
+
+        i {
+          color: var(--admin-toolbar-text-light);
+        }
+    }
+
+  }
 }
 
 .fade-enter-active,
@@ -50,3 +77,4 @@
 .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
   opacity: 0;
 }
+
