--- a/templates/users/profile.html.twig
+++ b/templates/users/profile.html.twig
@@ -10,7 +10,7 @@
 
     <div>
         <form method="post" id="editcontent" >
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('useredit') }}">
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('profileedit') }}">
 
             {% include '@bolt/_partials/fields/text.html.twig' with {
                 'label' : 'label.username'|trans,
@@ -42,6 +42,7 @@
                 'class': 'form-control',
             } %}
 
+
             {% set localeOptions = [] %}
 
             {% for locale in locales() %}
@@ -59,6 +60,14 @@
                 'value' : user.locale,
                 'options' : localeOptions,
             } %}
+
+            {% include '@bolt/_partials/fields/select.html.twig' with {
+                'label' : 'label.roles'|trans,
+                'name' : 'roles',
+                'value' : user.roles,
+                'options' : [],
+            } %}
+
 
             {# TODO: include form field with '@bolt/_partials/fields/select.html.twig' #}
             <div class="form-group">
