Working on editing users

--- a/templates/users/profile.html.twig
+++ b/templates/users/profile.html.twig
@@ -68,19 +68,19 @@
                 'options' : [],
             } %}
 
-
             {# TODO: include form field with '@bolt/_partials/fields/select.html.twig' #}
+            {# Comment out for a while, until we work on this again
             <div class="form-group">
-                <label for="user_backendTheme" class="required">Backend theme</label>
-                <select id="user_backendTheme" name="user[backendTheme]" class="form-control">
+                <label for="backendTheme" class="required">Backend theme</label>
+                <select id="backendTheme" name="backendTheme" class="form-control">
                     <option value="default" selected="selected">The Default theme</option>
                     <option value="dark">The Default Dark theme</option>
                     <option value="light">A pretty Light theme</option>
                     <option value="woordpers">WoordPers: Kinda looks like that other CMS</option>
                 </select>
             </div>
-
-            {# <theme-select></theme-select> #}
+            <theme-select></theme-select>
+            #}
 
             <button type="submit" class="btn btn-primary">
                 <i class="fa fa-save" aria-hidden="true"></i> {{ 'action.save'|trans }}
