--- a/assets/scss/modules/admin/_sidebar.scss
+++ b/assets/scss/modules/admin/_sidebar.scss
@@ -195,6 +195,7 @@
 .admin {
   &.is-slim {
     .admin__sidebar {
+      width: $admin-sidebar-width / 3;
       .admin__sidebar--separator,
       .admin__sidebar--footer {
         display: none;
