--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -5,5 +5,9 @@
             :id="'{{ id }}'"
             :name="'{{ name }}'"
             :value="{{ value|json_encode }}"
+            :label="{{ label|json_encode }}"
+            :label_class="{{ label_class|default()|json_encode }}"
+            :class="{{ class|json_encode }}"
+            :hidden="{{ hidden|default('false') }}"
         ></editor-password>
 {% endblock %}
