--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,7 +40,7 @@
                 'label_class': 'required',
                 'name': 'password',
                 'value': '',
-                'class': 'form-control',
+                'hidden': 'true'
             } %}
             <div class="form-group form-check">
                 <input type="checkbox" class="form-check-input" name="_remember_me" id="_remember_me">
