--- a/templates/users/listing.html.twig
+++ b/templates/users/listing.html.twig
@@ -2,7 +2,7 @@
 {% import '@bolt/_macro/_macro.html.twig' as macro %}
 
 {% block title %}
-    {{ title }}
+    {{ macro.icon('users') }} {{ title }}
 {% endblock %}
 
 {% block container "widecontent" %}
