aside block var check, add class and reqrite grid layout. Removed widecontent class

--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -79,7 +79,8 @@ $grid-breakpoints: (
         md: 768px,
         lg: 992px,
         xl: 1200px,
-        wd: 1400px
+        wd: 1400px,
+        xw: 1750px
 );
 
 // Modal Dialog spacing
