--- a/templates/bundles/TranslationBundle/WebUI/base.html.twig
+++ b/templates/bundles/TranslationBundle/WebUI/base.html.twig
@@ -1,6 +1,7 @@
 {% extends '@bolt/_base/layout.html.twig' %}
 
-{% block container "widecontent" %}
+{% block container %}
+{% endblock %}
 
 {% block title %}
     Edit Translations
