--- a/templates/finder/editfile.html.twig
+++ b/templates/finder/editfile.html.twig
@@ -15,7 +15,8 @@
 } %}
 {% set mode = modes[extension]|default('') %}
 
-{% block container "widecontent" %}
+{% block container %}
+{% endblock %}
 
 {% block title %}
     {{ 'caption.edit_file'|trans }} » <strong>{{ file|split('/')|last}}</strong>
