--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -11,10 +11,10 @@ $bolt-saturated: #003E7C; // Very saturated. Use with care
 $big-z-index: 1000;
 
 // Typography
-$font-family-base:              -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$headings-font-family:          'Source Sans Variable', sans-serif;
+$font-family-base:            -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$headings-font-family:        'Source Sans Variable', sans-serif;
 
-$font-size-base:                1rem;
+$font-size-base:              1rem;
 
 $h1-font-size:                $font-size-base * 2.5;
 $h2-font-size:                $font-size-base * 2;
@@ -71,13 +71,15 @@ $light: #E0E0E0;
 $dark: #333;
 $disabled: #C8C8C8;
 
+$spacer: 1rem;
+
 // Grid
 $grid-breakpoints: (
-        xs: 0,
+        xs: 480px,
         sm: 576px,
         md: 768px,
         lg: 992px,
-        xl: 1200px,
+        xl: 1280px,
         wd: 1400px,
         xw: 1750px
 );
