--- a/assets/scss/modules/admin/_header.scss
+++ b/assets/scss/modules/admin/_header.scss
@@ -15,7 +15,7 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    padding: $spacer;
+    padding: $spacer $spacer*1.8125;
     position: relative;
   }
   &--togglebar {
