sligment checkboxes on listing content type pages, styling tweaks, font awesome general margin

--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -97,6 +97,7 @@ $yiq-contrasted-threshold:  150;
   --foreground: #FFF;
   --primary: #255687;
   --shade: #666;
+  --shade-light: #ddd;
   --status-published: #08b883;
   --status-draft: #1078da;
   --status-held: #dd2443;
