--- a/assets/scss/modules/listing/_filter.scss
+++ b/assets/scss/modules/listing/_filter.scss
@@ -42,7 +42,8 @@
     }
 
     .custom-control {
-      margin-left: $spacer / 4;
+      margin-left: $spacer*0.5;
+      margin-top: $spacer*0.25;
     }
 
     .control--button {
