edit actions dropdown BEM classes and font size

--- a/assets/scss/modules/listing/row/row.scss
+++ b/assets/scss/modules/listing/row/row.scss
@@ -281,6 +281,11 @@ $checkbox-row-width: 34px;
   }
 }
 
+.edit-actions {
+  &__dropdown {
+    font-size: 0.9375rem;
+  }
+}
 .card-enter-active,
 .card-leave-active {
   transition: all 0.25s;
