variables in one place, class for widgets

--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -118,4 +118,10 @@ $yiq-contrasted-threshold:  150;
   }
 }
 
+// Variables for admin, toolbar and admin sidebar
+$admin-toolbar-height: 40px;
+$admin-sidebar-width: 200px;
+$admin-sidebar-width-wide: 250px;
+$admin-aside-width: 320px;
+$admin-header-height: 70px;
 
