--- a/templates/content/edit.html.twig
+++ b/templates/content/edit.html.twig
@@ -11,7 +11,7 @@
     {{ (app.request.get('_route') == 'bolt_content_duplicate') ? 'caption.duplicate'|trans : 'caption.edit'|trans }}
     {{ record.definition.singular_name }}
     »
-    <strong>{{ excerpt(record|title, 50)|default('New') }}</strong>
+    {{ excerpt(record|title, 50)|default('New') }}
 {% endblock %}
 
 {% block vue_id 'editor' %}
