--- a/templates/pages/menupage.html.twig
+++ b/templates/pages/menupage.html.twig
@@ -8,7 +8,7 @@
     {% endif %}
 {% endfor %}
 
-{% block title %} <strong>{{ menu.name }}</strong>
+{% block title %} {{ menu.name }}
 {% endblock title %}
 
 {% block main %}
