--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -3,7 +3,7 @@
 
 {% block title %}
     {{ macro.icon('user') }}
-    {{ 'title.edit_user'|trans }} » <strong>{{ display_name|default(__('user.new_user')) }}</strong>
+    {{ 'title.edit_user'|trans }} » {{ display_name|default(__('user.new_user')) }}
 {% endblock %}
 
 {% block vue_id 'editor' %}
