Updating Version class, bumping to beta 1.

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -8,6 +8,8 @@
 
     <h2>Bolt {{ constant('Bolt\\Version::VERSION') }}</h2>
 
+    <h3>{{ constant('Bolt\\Version::CODENAME') }} <small><em>({{ installType }})</em></small></h3>
+
     <p>
         Bolt is a CMS that strives to be simple, fast, straightforward and enjoyable to use. Both for
         developers and content-editors. Bolt is Open Source, and as such it uses other Open Source
